# eximel

./: .gitignore  README.rst  mypy.ini  pyproject.toml  test.xml
eximel/: __init__.py  __main__.py  cli.py  exceptions.py  parser.py
tests/: test_eximel.py
